Fix chrome scrollbars

--- a/src/aeon-wikipedia.user.css
+++ b/src/aeon-wikipedia.user.css
@@ -275,8 +275,8 @@
 
     *::-webkit-scrollbar-thumb {
         background-color: var(--background-3);
-        border-radius: 20px;
-        border: 3px solid var(--background);
+        border-radius: 0px;
+        border: 0px solid var(--background);
     }
     
     body,
@@ -509,6 +509,10 @@
         text-align: center;
         border-bottom: 1px solid var(--background) !important;
         border-top: 1px solid var(--background) !important;
+    }
+
+    .mw-parser-output .sidebar-list-title {
+        border-bottom: 1px solid var(--background) !important;
     }
     
     .mw-page-container {
